--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			endtimeHours: 14,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "" 
+			timeZone: "Asia/kolkata" 
 			// ex:  timeZone: "America/New_York"
 			//go to " http://momentjs.com/timezone/ " to get timezone
 		});
