--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 
 		<!--  -->
-		Designed By Soumya Ranjan
+		Designed By Soumya Ranjan.
 		<!--<div class="flex-w flex-c-m p-b-35">
 			<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 				<i class="fa fa-instagram"></i>
