--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 			/*Set Endtime here*/
 			/*Endtime must be > current time*/
 			endtimeYear: 2023,
-			endtimeMonth: 07,
+			endtimeMonth: 7,
 			endtimeDate: 24,
 			endtimeHours: 14,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "Indian Standard Time" 
+			timeZone: "Asia/Kolkata" 
 			// ex:  timeZone: "America/New_York"
 			//go to " http://momentjs.com/timezone/ " to get timezone
 		});
