--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 		<!--  -->
 		Designed By Soumya Ranjan Parida.
-		<!--<div class="flex-w flex-c-m p-b-35">
+		<div class="flex-w flex-c-m p-b-35">
 			<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 				<i class="fa fa-instagram"></i>
 			</a>
@@ -93,7 +93,7 @@
 			
 		</div>
 	</div>
--->
+
 
 
 	
